yuma (1.13-3) unstable; urgency=low
  * Fixed bug in yangdump refine-stmt validation
  * Fixed bug in yangdump enumeration validation
  * Changed license from IWL to BSD
  * moved yuma project back to netconfcentral.org
  * combined yuma and yuma-dev packages
  * added code gen to yangdump; removed yangdumpcode
 -- Andy Bierman <andy@netconfcentral.org>  Fri, 16 Jul 2010 14:17:00 -0700
yuma (1.13-2) unstable; urgency=low
  * Fixed bug in yangcli command prompt
  * Fixed bug in README file
  * Added support for tarball release and non-root install
 -- Andy Bierman <andyb@iwl.com>  Wed, 30 Jun 2010 12:29:00 -0700
yuma (1.13-1) unstable; urgency=medium
  * Added partial lock support (RFC 57517)
  * Added partial-lock monitoring support
  * Bugfixes in XPath validation, config filtering,
    H file code generation
  * Static link of obscure libraries on debian build
  * Static link of libncx to allow install without root priv
  * Single package instead of 3 packages for tools
 -- Andy Bierman <andyb@iwl.com>  Sun, 27 Jun 2010 17:17:00 -0700
yuma (1.12-2) unstable; urgency=medium
  * Changed numbering to align with debian standards
  * Fixed bugs in yangcli:
     * tab completion on complex types
     * parse-def bug sometimes ignored XML prefix
     * improved ambiguous command error handling
  * Fixed yangdump HTML generation for references,
    sometimes caused invalid xHTML output
  * Fixed bugs in yangdiff causing incorrect diff results
  * Added YANG usage statistical reporting to yangdump
  * Fixed parser bug incorrectly treating list in a
    grouping from another module as an error
  * Updated YANG modules in netconfd:
      * ietf-netconf-with-defaults
      * ietf-netconf-monitoring
      * ietf-netconf
      * ietf-inet-types
      * ietf-yang-types
      * yuma-proc
  * Made all code C++ safe for yangui project
 -- Andy Bierman <andyb@iwl.com>  Tue, 01 Jun 2010 14:02:00 -0700
yuma (0.12-1) unstable; urgency=low
  * Added :url capability support to netconfd