@@ -1,9 +1,14 @@
 yuma (1.13-3) unstable; urgency=low
-  * Fixed bug in yangdump refine-stmt validation
-  * Fixed bug in yangdump enumeration validation
+  * Fixed yangdump bugs
+	- yangdump refine-stmt validation
+	- enumeration validation corrected
+	- false config-mismatch error in groupings fixed
+  * Added '$YUMA_INSTALL/lib' to SIL search path to support tarball install
   * Changed license from IWL to BSD
   * moved yuma project back to netconfcentral.org
   * combined yuma and yuma-dev packages
+	- yangdump now generates SIL code (format=c,h,sqldb)
+	- usr/include/yuma/* files installed
   * added code gen to yangdump; removed yangdumpcode
  -- Andy Bierman <andy@netconfcentral.org>  Fri, 16 Jul 2010 14:17:00 -0700
 yuma (1.13-2) unstable; urgency=low
